--- a/index.html
+++ b/index.html
@@ -61,6 +61,10 @@
                     <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M12 22s8-4 8-10V5l-8-3-8 3v7c0 6 8 10 8 10z"/></svg>
                     Privacy Policy
                 </button>
+                <button class="tab-btn" role="tab" aria-selected="false" aria-controls="panel-terms" data-tab="terms">
+                    <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"/><polyline points="14 2 14 8 20 8"/><line x1="16" y1="13" x2="8" y2="13"/><line x1="16" y1="17" x2="8" y2="17"/><polyline points="10 9 9 9 8 9"/></svg>
+                    Terms of Use
+                </button>
             </nav>
 
             <!-- Tab Panels -->
@@ -81,7 +85,7 @@
                                 </div>
                                 <h3>Contact Us</h3>
                                 <p>Have a question, feedback, or need help with eSign? Reach out and we'll get back to you as soon as possible.</p>
-                                <a href="mailto:support@esign-app.com" class="support-link">support@esign-app.com</a>
+                                <a href="mailto:kaanyildiz.iosdev@gmail.com" class="support-link">kaanyildiz.iosdev@gmail.com</a>
                             </div>
 
                             <div class="support-item">
@@ -115,7 +119,7 @@
 
                         <div class="policy-intro">
                             <p>This Privacy Policy explains how eSign ("the App") collects, uses, and shares information when you use the App. This policy applies to the App and related services provided by Kaan Yildiz ("we," "us," or "our").</p>
-                            <p>If you have questions, contact us at: <a href="mailto:support@esign-app.com">support@esign-app.com</a></p>
+                            <p>If you have questions, contact us at: <a href="mailto:kaanyildiz.iosdev@gmail.com">kaanyildiz.iosdev@gmail.com</a></p>
                         </div>
 
                         <!-- Section 1 -->
@@ -281,7 +285,7 @@
                         <!-- Section 11 -->
                         <div class="policy-section">
                             <h3><span class="section-num">11.</span> Your Rights and Choices</h3>
-                            <p>Depending on your location, you may have rights to access, correct, delete, or object to certain processing of your information. You can contact us at <a href="mailto:support@esign-app.com">support@esign-app.com</a>.</p>
+                            <p>Depending on your location, you may have rights to access, correct, delete, or object to certain processing of your information. You can contact us at <a href="mailto:kaanyildiz.iosdev@gmail.com">kaanyildiz.iosdev@gmail.com</a>.</p>
                             <p>You can delete your documents and data directly within the App at any time, and you can choose not to use AI-assisted features entirely.</p>
                         </div>
 
@@ -289,6 +293,111 @@
                         <div class="policy-section">
                             <h3><span class="section-num">12.</span> Changes to This Policy</h3>
                             <p>We may update this Privacy Policy from time to time. We will update the "Effective Date" above and, when appropriate, provide additional notice in the App.</p>
+                        </div>
+                    </div>
+                </section>
+
+                <!-- Terms of Use Panel -->
+                <section class="tab-panel" id="panel-terms" role="tabpanel">
+                    <div class="glass-card policy-card">
+                        <div class="policy-header">
+                            <h2>Terms of Use</h2>
+                            <p class="effective-date">Effective Date: February 10, 2026</p>
+                        </div>
+
+                        <div class="policy-intro">
+                            <p>These Terms of Use govern your use of eSign ("the App"), provided by Kaan Yildiz ("we," "us," or "our"). By downloading or using the App, you agree to these terms.</p>
+                            <p>If you have questions, contact us at: <a href="mailto:kaanyildiz.iosdev@gmail.com">kaanyildiz.iosdev@gmail.com</a></p>
+                        </div>
+
+                        <div class="policy-section">
+                            <h3><span class="section-num">1.</span> Acceptance of Terms</h3>
+                            <p>By accessing or using eSign, you confirm that you are at least 13 years old (or the minimum age required in your country) and that you agree to be bound by these Terms of Use. If you do not agree, do not use the App.</p>
+                        </div>
+
+                        <div class="policy-section">
+                            <h3><span class="section-num">2.</span> License to Use</h3>
+                            <p>We grant you a limited, non-exclusive, non-transferable, revocable license to use the App for personal or business purposes on your Apple device, subject to these terms and Apple's App Store terms.</p>
+                            <ul>
+                                <li>You may not copy, modify, distribute, sell, or sublicense any part of the App.</li>
+                                <li>You may not reverse engineer, decompile, or attempt to extract the source code of the App.</li>
+                                <li>You may not use the App for any unlawful purpose or in violation of any applicable law or regulation.</li>
+                            </ul>
+                        </div>
+
+                        <div class="policy-section">
+                            <h3><span class="section-num">3.</span> Your Content and Documents</h3>
+                            <p>You retain full ownership of all documents, signatures, and data you create or import into the App. By using AI-assisted features, you grant us a limited right to transmit relevant document content to OpenAI solely to fulfill your request.</p>
+                            <ul>
+                                <li>You are solely responsible for the content of documents you sign or send.</li>
+                                <li>You must not use the App to sign, create, or send fraudulent, forged, or illegal documents.</li>
+                                <li>You represent that you have the authority to sign any document you execute through the App.</li>
+                            </ul>
+                            <div class="policy-callout">
+                                <strong>Legal validity:</strong> eSign is a tool to facilitate document signing. The legal enforceability of electronically signed documents depends on applicable laws in your jurisdiction. You are responsible for ensuring your use complies with relevant e-signature laws.
+                            </div>
+                        </div>
+
+                        <div class="policy-section">
+                            <h3><span class="section-num">4.</span> AI-Assisted Features</h3>
+                            <p>The App offers optional AI-powered features (such as smart field detection and document analysis) powered by OpenAI. By using these features:</p>
+                            <ul>
+                                <li>You acknowledge that relevant document content will be transmitted to OpenAI to generate results.</li>
+                                <li>You agree not to submit documents containing highly sensitive personal data (e.g., government IDs, financial account numbers) through AI features unless you accept the associated risk.</li>
+                                <li>AI-generated results are provided as-is and may not be perfectly accurate. You are responsible for reviewing all AI output before acting on it.</li>
+                            </ul>
+                        </div>
+
+                        <div class="policy-section">
+                            <h3><span class="section-num">5.</span> Subscriptions and Purchases</h3>
+                            <p>Certain features of the App may require a paid subscription or in-app purchase, processed through Apple's App Store. All purchases are subject to Apple's payment terms.</p>
+                            <ul>
+                                <li>Subscriptions automatically renew unless cancelled at least 24 hours before the end of the current period.</li>
+                                <li>You can manage or cancel subscriptions in your Apple ID account settings.</li>
+                                <li>We do not offer refunds outside of Apple's standard refund policy.</li>
+                            </ul>
+                        </div>
+
+                        <div class="policy-section">
+                            <h3><span class="section-num">6.</span> Prohibited Uses</h3>
+                            <p>You agree not to use the App to:</p>
+                            <ul>
+                                <li>Forge, falsify, or fraudulently execute any document or signature.</li>
+                                <li>Violate any applicable law, regulation, or third-party rights.</li>
+                                <li>Attempt to gain unauthorized access to any system or data.</li>
+                                <li>Transmit malware, viruses, or any harmful code through the App.</li>
+                                <li>Impersonate any person or entity when signing or sending documents.</li>
+                            </ul>
+                        </div>
+
+                        <div class="policy-section">
+                            <h3><span class="section-num">7.</span> Disclaimer of Warranties</h3>
+                            <p>The App is provided "as is" and "as available" without warranties of any kind, express or implied. We do not warrant that the App will be error-free, uninterrupted, or that AI-generated results will be accurate or complete.</p>
+                        </div>
+
+                        <div class="policy-section">
+                            <h3><span class="section-num">8.</span> Limitation of Liability</h3>
+                            <p>To the fullest extent permitted by law, we shall not be liable for any indirect, incidental, special, consequential, or punitive damages arising from your use of the App, including but not limited to loss of data, loss of business, or reliance on AI-generated output.</p>
+                        </div>
+
+                        <div class="policy-section">
+                            <h3><span class="section-num">9.</span> Termination</h3>
+                            <p>We reserve the right to suspend or terminate your access to the App at any time if you violate these Terms. You may stop using the App at any time by deleting it from your device.</p>
+                        </div>
+
+                        <div class="policy-section">
+                            <h3><span class="section-num">10.</span> Governing Law</h3>
+                            <p>These Terms are governed by the laws of the jurisdiction in which the developer operates, without regard to conflict of law principles. Any disputes shall be resolved in the competent courts of that jurisdiction.</p>
+                        </div>
+
+                        <div class="policy-section">
+                            <h3><span class="section-num">11.</span> Changes to These Terms</h3>
+                            <p>We may update these Terms of Use from time to time. We will update the "Effective Date" above and, where appropriate, provide notice within the App. Continued use of the App after changes constitutes acceptance of the updated terms.</p>
+                        </div>
+
+                        <div class="policy-section">
+                            <h3><span class="section-num">12.</span> Contact</h3>
+                            <p>For questions about these Terms, contact us at <a href="mailto:kaanyildiz.iosdev@gmail.com">kaanyildiz.iosdev@gmail.com</a>.</p>
                         </div>
                     </div>
                 </section>
@@ -301,7 +410,7 @@
     <footer class="site-footer">
         <div class="container">
             <p>&copy; 2026 eSign. All rights reserved.</p>
-            <p class="footer-contact">Contact: <a href="mailto:support@esign-app.com">support@esign-app.com</a></p>
+            <p class="footer-contact">Contact: <a href="mailto:kaanyildiz.iosdev@gmail.com">kaanyildiz.iosdev@gmail.com</a></p>
         </div>
     </footer>
 
